// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`incrementAsync 1`] = `
Object {
  "f": Array [
    Array [
      "type",
      "MENU_ITEM",
    ],
    Array [
      "index",
      300,
    ],
    Array [
      "value",
      Object {
        "$": "ReactElement",
        "children": Array [
          "Increment Async",
        ],
        "props": Object {
          "f": Array [
            Array [
              "onClick",
              Object {
                "$": "Bind",
                "f": Array [
                  Array [
                    Object {
                      "$": "#this",
                    },
                    Object {
                      "$": "undefined",
                    },
                  ],
                  Array [
                    Object {
                      "$": "#fun",
                    },
                    Object {
                      "$": "runIncrementAsync",
                    },
                  ],
                  Array [
                    Object {
                      "$": "#args",
                    },
                    Array [
                      Object {
                        "$": "extrasDispatch",
                      },
                    ],
                  ],
                ],
              },
            ],
            Array [
              "children",
              Object {
                "$": "undefined",
              },
            ],
          ],
        },
        "type": "button",
      },
    ],
  ],
}
`;

exports[`incrementIfOdd 1`] = `
Object {
  "f": Array [
    Array [
      "type",
      "MENU_ITEM",
    ],
    Array [
      "index",
      400,
    ],
    Array [
      "value",
      Object {
        "$": "ReactElement",
        "children": Array [
          "Increment if odd",
        ],
        "props": Object {
          "f": Array [
            Array [
              "onClick",
              Object {
                "$": "Bind",
                "f": Array [
                  Array [
                    Object {
                      "$": "#this",
                    },
                    null,
                  ],
                  Array [
                    Object {
                      "$": "#fun",
                    },
                    Object {
                      "$": "_signal",
                    },
                  ],
                  Array [
                    Object {
                      "$": "#args",
                    },
                    Array [
                      Object {
                        "$": "extrasDispatch",
                      },
                      "INCREMENT",
                      Object {
                        "$": "undefined",
                      },
                    ],
                  ],
                ],
              },
            ],
            Array [
              "children",
              Object {
                "$": "undefined",
              },
            ],
          ],
        },
        "type": "button",
      },
    ],
  ],
}
`;

exports[`incrementIfOdd 2`] = `
Object {
  "f": Array [
    Array [
      "type",
      "MENU_ITEM",
    ],
    Array [
      "index",
      400,
    ],
    Array [
      "value",
      Object {
        "$": "ReactElement",
        "children": Array [
          "Increment if odd",
        ],
        "props": Object {
          "f": Array [
            Array [
              "onClick",
              Object {
                "$": "nop",
              },
            ],
            Array [
              "children",
              Object {
                "$": "undefined",
              },
            ],
          ],
        },
        "type": "button",
      },
    ],
  ],
}
`;
